Add social media links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script src="scripts/script.js"></script>
 
@@ -14,8 +16,25 @@
                 <img src="images/profile.jpg"/>
             </div>
             <div id="right">
-                <h1 class="rightpane">> Hi I'm Jack</h1>
+                <h1 class="rightpane">> Hi, I'm Jack</h1>
                 <h2 class="rightpane">> Java Developer</h2>
+                <a href="https://twitter.com/jack_w_gibbs" class="fa fa-twitter"></a>
+                <a href="https://www.linkedin.com/in/jackwgibbs" class="fa fa-linkedin"></a>
+                <a href="https://www.instagram.com/jackwgibbs_" class="fa fa-instagram"></a>
+                <a href="https://github.com/jackwgibbs" class="fa fa-github"></a>
+
+                <p class="rightpane">
+                    Graduate Java Developer at Equiniti working as part of a scrum team to design, develop and test
+                    software and services. Highly motivated, determined and driven to demonstrate and enhance skills
+                    in software development. <br><br>
+                    Computer Science graduate with a high First-Class degree and Deans Commendation recognising
+                    dedication to the subject from The University of Exeter. Research focused on the emerging field
+                    of lightweight cryptography; more specifically, lightweight encryption primitives for
+                    resource-constrained devices. Designed, implemented and tested a command line tool implementing
+                    a selection of such primitives.<br><br>
+                    Passion for continued self development and learning through individual projects outside of work,
+                    ranging from a web-based Spotify stats dashboard to a group planner application for friends.
+                </p>
             </div>
         </div>
     </div>
