--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script src="scripts/script.js"></script>
