Update bio and improve CSS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -12,7 +14,7 @@
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script src="scripts/script.js"></script>
@@ -35,16 +37,23 @@
                 <a href="https://github.com/jackwgibbs" class="fa fa-github"></a>
 
                 <p class="rightpane">
-                    Graduate Java Developer at Equiniti working as part of a scrum team to design, develop and test
-                    software and services. Highly motivated, determined and driven to demonstrate and enhance skills
-                    in software development. <br><br>
-                    Computer Science graduate with a high First-Class degree and Deans Commendation recognising
-                    dedication to the subject from The University of Exeter. Research focused on the emerging field
-                    of lightweight cryptography; more specifically, lightweight encryption primitives for
-                    resource-constrained devices. Designed, implemented and tested a command line tool implementing
-                    a selection of such primitives.<br><br>
-                    Passion for continued self development and learning through individual projects outside of work,
-                    ranging from a web-based Spotify stats dashboard to a group planner application for friends.
+                    As a passionate Java Developer and recent graduate, I am committed to creating high-quality software solutions to solve complex problems.
+                    My experience working within a collaborative team has provided me with first-hand experience in the scrum methodology,
+                    and I have developed a solid foundation in Agile development and collaborative teamwork.
+                    <br><br>
+                    In my role at Equiniti, I heavily focus on Java development and have a strong proficiency in designing RESTful
+                    APIs using frameworks such as Spring. I also have extensive experience in automated testing using Cucumber,
+                    ensuring that the software I deliver meets the highest quality standards.
+                    <br><br>
+                    With a high First-Class degree and Deans Commendation from The University of Exeter,
+                    I have a strong academic background in Computer Science. My research focused on the emerging field of
+                    lightweight cryptography, particularly lightweight encryption primitives for resource-constrained devices.
+                    I have successfully designed, implemented, and tested a command line tool that implements a selection of such primitives.
+                    <br><br>
+                    I am an avid learner and enjoy engaging in individual projects outside of work,
+                    including developing a web-based Spotify stats dashboard and a group planner application for friends.
+                    I am highly motivated, determined, and driven to continuously enhance my skills and knowledge in software development.
+                    <br><br>
                 </p>
             </div>
         </div>
